--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "Valentina Ivanova <valiaivanova8319@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "pino-http": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "eslint": "^9.3.0",
     "globals": "^15.3.0",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "pino-pretty": "^11.1.0"
   }
 }
