--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-PORT = "PORT";
-MONGODB_USER="MONGODB_USER"
-MONGODB_PASSWORD="MONGODB_PASSWORD"
-MONGODB_URL="MONGODB_URL"
-MONGODB_DB="MONGODB_DB"
+PORT=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+JWT_SECRET=
+APP_DOMAIN=
